# Smart-Shopper

./: .dockerignore  .env.example  .gitignore  PFA_PROJECT_FULL_OVERVIEW.md  README.md  docker-compose.full.yml  docker-compose.yml  last_llm_response.txt  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
agents/: decision_agent.py  market_agent.py  ner_agent.py  orchestrator.py  research_agent.py
agents/agent_generator/: agent.py  reasoning.py
agents/ambient_scheduler/: __init__.py  scheduler.py
agents/decision/: __init__.py  agent.py  service.py
agents/governance/: __init__.py  agent.py  policy_engine.py
agents/orchestrator/: __init__.py  (+2 more)
docker/: Dockerfile.ner  Dockerfile.python.base  Dockerfile.service
docs/: IMPLEMENTED_PLAN_EXPLANATION.md  PFA_RAPPORT_PLAN_PRO.md  PROJECT_ARCHITECTURE_GUIDE.md  deployment.md  runbook.md
gateway/: telegram_proxy.py
logs/: user_interactions.txt
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
proto/: ner.proto
scrapers/: avito.py  jumia.py  jumia_debug.html  test.py
scripts/: analyze_fixtures.py  audit_scrape_providers.py  clear_response_cache.py  extract_palmarosa_sample.py  generate_aws_deployment_report_pdf.py  import_open_facts_vocabulary.py  probe_beauty_grocery.py  probe_new_providers.py  run_chat_examples_audit.py  run_local_pipeline.py  smoke_kafka_flow.py  start_e2e_local.ps1  test_llm_generator.py  test_real_scrape.py  update_provider_test_lists.py
shared/: __init__.py  product_matching.py  query_matching.py  scrape_quality.py
tests/: conftest.py
(+153 files in other folders)
