[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-shopper"
version = "0.0.0"
description = "Unified real-time intelligence system (Kafka agents, NER service, scraping, decisioning)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ENIAD IA" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "playwright>=1.44",
  "structlog>=24.1",
  "aiokafka>=0.10",
  "redis[hiredis]>=5.0",
  "pymongo>=4.7",
  "grpcio>=1.62",
  "grpcio-tools>=1.62",
  "protobuf>=6.33.5,<7",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "python-telegram-bot>=21.0",
  "transformers>=4.41",
  "torch>=2.2",
  "safetensors>=0.4",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
scraping = [
  "scrapy>=2.11",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "agents*", "gateway*", "models*", "generated*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
